--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "ogl": "^1.0.11",
